--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,7 @@
 @-webkit-keyframes androidBugfix {from { padding: 0; } to { padding: 0; }}
 body { -webkit-animation: androidBugfix infinite 1s; }
 /* end workaround */
+
+.editable {
+  cursor: pointer;
+}
